2008-04-01  Jens Granseuer  <jensgr@gmx.net>

	* sound-properties-capplet.c: (device_added_callback): don't show
	modems and other unwanted devices (bug #523888)

2008-03-27  Jens Granseuer  <jensgr@gmx.net>

	* sound-properties.glade: don't mention esd (bug #519722)

2008-03-24  Jaap A. Haitsma  <jaap@haitsma.org>

	* visual-bell.png: New tango icon
	(bug #523916)

2008-02-09  Jens Granseuer  <jensgr@gmx.net>

	* Makefile.am: use the libsounds.la now that libsounds uses libtool
	(bug #515252)

2007-12-11  Jens Granseuer  <jensgr@gmx.net>

	* Makefile.am:
	* icons/48x48:
	* icons/48x48/gnome-sound-properties.png: add 48x48 PNG icon version
	by Andreas Nilsson <nisses.mail@home.se> (bug #502945)

2007-06-29  Jens Granseuer  <jensgr@gmx.net>

	* Makefile.am: fix target dir for icons

2007-06-28  Jens Granseuer  <jensgr@gmx.net>

	Patch by: Luca Feretti <elle.uca@libero.it>

	* gnome-settings-sound.desktop.in.in:
	* sound-properties-capplet.c: (main): use new icon name (patch from bug
	#397305)

2007-06-28  Jens Granseuer  <jensgr@gmx.net>

	* Makefile.am:
	* icons/16x16/gnome-sound-properties.svg:
	* icons/22x22/gnome-sound-properties.svg:
	* icons/32x32/gnome-sound-properties.svg:
	* icons/scalable/gnome-sound-properties.svg:
	add new icons by Josef Vybíral (closes bug #397305)

2007-05-27  Jens Granseuer  <jensgr@gmx.net>

	* pipeline-tests.c: (user_test_pipeline): and don't use
	gtk_timeout_remove, either..

2007-05-27  Jens Granseuer  <jensgr@gmx.net>

	* pipeline-tests.c: (user_test_pipeline): use g_timeout_add() instead
	of the deprecated gtk_timeout_add()
	* sound-properties.glade: set non-0 pulse step for the progress bar to
	actually make it move (fixes bug #441587)

2007-05-06  Jens Granseuer  <jensgr@gmx.net>

	* sound-properties-capplet.c: (create_dialog), (main): don't crash if
	glade file is not available

2007-05-06  Jens Granseuer  <jensgr@gmx.net>

	* sound-properties-capplet.c: (create_dialog):